# PyETG1510

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/: requirements.txt
docs/source/: README.md  conf.py  index.md  japanesesupport.py  modules.rst  pyetg1510.helper.rst  pyetg1510.mailbox.rst  pyetg1510.rst
pyetg1510/: __init__.py  etg_1510.py  sdo_1xxx_master_object.py  sdo_8xxx_configuration_data.py  sdo_9xxx_information_data.py  sdo_axxx_master_diagnosis.py  sdo_fxxx_controls.py  topology.py
pyetg1510/helper/: __init__.py  logging_service.py  settings.py
pyetg1510/mailbox/: __init__.py  connection.py  mailbox_gateway.py  sdo_application_interface.py
tests/: test_etg_1510.py
